--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <style>
+        p {font-size: 16px;}
+    </style>
     {% if title %}
     <title>{{title}} - microblog</title>
     {% else %}
@@ -13,5 +16,6 @@
     {% else %}
     <h1>Hello</h1>
     {% endif %}
+    <p>Test line</p>
 </body>
 </html>
