--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -1,21 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <style>
-        p {font-size: 16px;}
-    </style>
-    {% if title %}
-    <title>{{title}} - microblog</title>
-    {% else %}
-    <title>Welcome to microblog</title>
-    {% endif %}
-</head>
-<body>
+{% extends "base.html" %}
+{% block content %}
     {% if user %}
     <h1>Hello, {{user}}</h1>
     {% else %}
     <h1>Hello</h1>
     {% endif %}
-    <p>Test line</p>
-</body>
-</html>
+    <div id="posts">
+    {% for data in posts %}
+    <p> {{ data.author }} writes: {{ data.body }}</p>
+    {% endfor %}
+    </div>  
+{% endblock %}
