--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -9,6 +9,20 @@
 </head>
 <body>
     <a href="/">Microblog</a>
-    {% block content %}{% endblock %}
+    <a href="/login">Login</a> 
+    <div id="flashed_messages">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+            <ul>
+                {% for msg in messages %}
+                <li>{{ msg }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        {% endwith %}
+    </div>
+    <div id="content">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
